--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,6 @@
 name: CI
 on:
+  workflow_dispatch:
   push:
     branches:
       - 5.3.x
@@ -10,7 +11,7 @@ jobs:
     name: '${{ matrix.os.name}} | Java ${{ matrix.java.version}}'
     runs-on: ${{ matrix.os.id }}
     timeout-minutes: 60
-    if: ${{ github.repository == 'spring-projects/spring-framework' }}
+    # if: ${{ github.repository == 'spring-projects/spring-framework' }}
     strategy:
       matrix:
         os:
@@ -41,15 +42,23 @@ jobs:
         id: build
         uses: ./.github/actions/build
         with:
+          publish: true
           java-version: ${{ matrix.java.version }}
           java-early-access: ${{ matrix.java.early-access || 'false' }}
           java-toolchain: ${{ matrix.java.toolchain }}
           develocity-access-key: ${{ secrets.GRADLE_ENTERPRISE_SECRET_ACCESS_KEY }}
-      - name: Send Notification
-        uses: ./.github/actions/send-notification
-        if: always()
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v4
         with:
-          webhook-url: ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
-          status: ${{ job.status }}
-          build-scan-url: ${{ steps.build.outputs.build-scan-url }}
-          run-name: ${{ format('{0} | {1} | Java {2}', github.ref_name, matrix.os.name, matrix.java.version) }}
+          name: jars-${{ matrix.java.version }}-${{ matrix.os.name }}
+          path: |
+            build/libs/**/*.jar
+  
+      # - name: Send Notification
+      #   uses: ./.github/actions/send-notification
+      #   if: always()
+      #   with:
+      #     webhook-url: ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
+      #     status: ${{ job.status }}
+      #     build-scan-url: ${{ steps.build.outputs.build-scan-url }}
+      #     run-name: ${{ format('{0} | {1} | Java {2}', github.ref_name, matrix.os.name, matrix.java.version) }}
